docker-k8s/yaml/k8s-setup.yaml
---
# Namespace for SCB Data Product Ingestion
apiVersion: v1
kind: Namespace
metadata:
  name: scb-ingestion
  labels:
    name: scb-ingestion
