docker-k8s/yaml/catalog-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: scb-frontend
  labels:
    app: catalog-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: catalog-api
        image: docker.io/svishal9/catalog-api:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /api/catalog/health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /api/catalog/health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: scb-frontend
  labels:
    app: catalog-api
spec:
  type: ClusterIP
  selector:
    app: catalog-api
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
